--- a/src/app/pages/dashboard/components/products/products.component.html
+++ b/src/app/pages/dashboard/components/products/products.component.html
@@ -277,7 +277,7 @@
         <div class="flex flex-col col-span-2">
           <label class="text-sm font-semibold text-gray-900 mb-2"> الوصف</label>
           <textarea formControlName="description" class="border border-gray-300 rounded-3xl p-2 text-right" maxlength="100"
-            lang="ar" wrap="false" style="max-height: 100px;"></textarea>
+            lang="ar" wrap="false" placeholder="you will not be able to copy and paste on this text-area for some selly business need example, Try it yourself :)" (paste)="onPaste($event)" (copy)="onCopy($event)" style="max-height: 100px;"></textarea>
         </div>
         <div class="flex flex-col col-span-2">
           <label
@@ -408,7 +408,10 @@
         </div>
         <div class="flex flex-col col-span-2">
           <label class="text-sm font-semibold text-gray-900 mb-2"> الوصف</label>
-          <textarea formControlName="description" class="border border-gray-300 rounded-3xl p-2 text-right"></textarea>
+          <textarea formControlName="description"
+            placeholder="you will not be able to copy and paste on this text-area for some selly business need example"
+            (paste)="onPaste($event)" (copy)="onCopy($event)"
+            class="border border-gray-300 rounded-3xl p-2 text-right"></textarea>
         </div>
       </div>
       <div class="flex flex-col p-2 border-2 border-gray-200 border-dashed border-t-0 w-full h-full rounded-b-3xl">
