--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -14,8 +14,8 @@
       </div>
         <!-- animated blured divs -->
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <app-user-card></app-user-card>
-        <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
+        <app-user-card class="col-span-full md:col-span-1"></app-user-card>
+        <div class="col-span-3 min-h-full rounded-3xl border-gray-300  sm:col-span-2">
 
         <!-- Cart Items -->
         <app-cart-items></app-cart-items>
