--- a/src/app/pages/settings/components/home/home.component.html
+++ b/src/app/pages/settings/components/home/home.component.html
@@ -14,7 +14,7 @@
           <div
             class="absolute bottom-[0%] right-[14%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
           </div>
-          <app-user-card></app-user-card>
+          <app-user-card class="col-span-full md:col-span-1"></app-user-card>
         <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
           <section class="">
             <div class=" px-4 py-8 mx-auto lg:py-16 ">
