--- a/src/app/shared/cart-items/cart-items.component.html
+++ b/src/app/shared/cart-items/cart-items.component.html
@@ -1,4 +1,4 @@
-<div class="divide-y divide-gray-100 max-h-96 min-h-30  overflow-scroll">
+<div class=" max-h-96 min-h-full  overflow-scroll">
   <div class="relative overflow-x-auto rounded-3xl p-4 border-2 border-dashed border-gray-200">
     <table class="w-full text-sm text-center text-gray-500 ">
       <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
