--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -26,44 +26,8 @@
       <app-payement-datails></app-payement-datails>
       <!-- Payement Datails Component -->
       <!-- Stepper Component -->
-      <div class="text-center rounded-3xl my-24 border-2 border-dashed border-gray-200">
-        <h1>Test Stepper</h1>
-        <ol
-          class="inline-flex flex-row-reverse justify-center items-center  p-3 my-2 space-x-2 text-sm font-medium text-center text-gray-500   rounded-3xl  sm:p-4 sm:space-x-4">
-          <li class="flex flex-row-reverse items-center text-blue-600 ">
-            <span class="flex items-center justify-center w-5 h-5 ml-2 text-xs border border-blue-600 rounded-full shrink-0 ">
-              1
-            </span>
-            بيانات <span class=" sm:inline-flex sm:ml-2">الدفع</span>
-      
-            <svg class="w-4 h-4 ml-2 sm:ml-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M18.75 19.5l-7.5-7.5 7.5-7.5m-6 15L5.25 12l7.5-7.5">
-              </path>
-            </svg>
-          </li>
-          <li class="flex flex-row-reverse items-center">
-            <span
-              class="flex items-center justify-center w-5 h-5 ml-2 text-xs border border-gray-500 rounded-full shrink-0 :border-gray-400">
-              2
-            </span>
-            بيانات <span class="hidden sm:inline-flex sm:ml-2">الشحن</span>
-            <svg class="w-4 h-4 ml-2 sm:ml-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M18.75 19.5l-7.5-7.5 7.5-7.5m-6 15L5.25 12l7.5-7.5">
-              </path>
-            </svg>
-          </li>
-          <li class="flex flex-row-reverse items-center">
-            <span
-              class="flex items-center justify-center w-5 h-5 ml-2 text-xs border border-gray-500 rounded-full shrink-0 :border-gray-400">
-              3
-            </span>
-            مراجعة الطلب
-          </li>
-        </ol>
-      
-      </div>
+    <app-stepper>
+      </app-stepper>
       <!-- Stepper Component -->
     </main>
     </div>
