--- a/src/app/pages/checkout/views/address-cart/address-cart.component.html
+++ b/src/app/pages/checkout/views/address-cart/address-cart.component.html
@@ -1,4 +1,4 @@
-<div class="col-span-3 lg:col-span-2 rounded-3xl border-2 border-dashed p-2 ">
+<div class="col-span-3 lg:col-span-2 rounded-3xl border-2 border-dashed p-2  text-right">
   <p class="text-gray-700">عنوان الشحن </p>
   <ng-container>
     <form [formGroup]="addressForm" (ngSubmit)="onSubmit()"
