--- a/src/app/pages/index/views/product-card/product-card.component.html
+++ b/src/app/pages/index/views/product-card/product-card.component.html
@@ -18,6 +18,7 @@
     <p class="mt-4 text-lg font-medium text-gray-900">${{product.price}}</p>
   </div>
   <h4>{{product.description}}</h4>
+  <h4 *ngIf="!product.description" class="invisible">''</h4>
   <div class="flex flex-row-reverse items-center justify-between gap-x-2">
     <button role="button" (click)="postCartItem(product)"
       class="w-full bg-gray-100 border px-4 py-2 rounded-full flex items-center justify-between hover:bg-gray-200 disabled:cursor-not-allowed">
