--- a/src/app/pages/checkout/views/payement-card/payement-card.component.html
+++ b/src/app/pages/checkout/views/payement-card/payement-card.component.html
@@ -115,11 +115,11 @@
     </div>
     </div>
     </div>
-    <div class="col-span-0  md:col-span-1 w-1 my-auto mx-auto">
-      <div class="flex flex-col items-center my-2">
-        <div class="h-14 w-0.5 bg-gray-500 inline-block"></div>
-        <b class="py-4 "> او</b>
-        <div class="h-14 w-0.5 bg-gray-500 inline-block"></div>
+    <div class="col-span-0  md:col-span-1  my-auto mx-auto">
+      <div class="flex flex-row md:flex-col justify-center items-center my-2">
+        <div class="my-2 w-1/2 md:h-14 md:w-0.5 bg-gray-500 inline-block"></div>
+        <b class="py-4 my-auto "> او</b>
+        <div class="my-2 w-1/2 md:h-14 md:w-0.5 bg-gray-500 inline-block"></div>
       </div>
     </div>
     <div class="col-span-12 md:col-span-7  border-2 border-dashed rounded-3xl p-2 m-2">
