--- a/src/app/pages/dashboard/components/products/products.component.html
+++ b/src/app/pages/dashboard/components/products/products.component.html
@@ -260,25 +260,17 @@
           </select>
         </div>
         <div class="flex flex-col">
-          <label class="text-sm font-semibold text-gray-900 mb-2">
-            <span>*</span>
-            <span>الاسم</span>
-          </label>
-          <input formControlName="name" class="border border-gray-300 rounded-3xl p-2 text-right" />
+<app-input [control]="addProductForm.get('name')" type="email" label="* الاسم" maxlength="20" autofocus="true"
+  required="true"></app-input>
+</div>
+
+        <div class="flex flex-col">
+    <app-input [control]="addProductForm.get('price')" type="number" label="* السعر" maxlength="20" autofocus="true"
+      required="true"></app-input>
         </div>
         <div class="flex flex-col">
-          <label class="text-sm font-semibold text-gray-900 mb-2">
-            <span>*</span>
-            <span>السعر</span>
-          </label>
-          <input formControlName="price" class="border border-gray-300 rounded-3xl p-2 text-right" />
-        </div>
-        <div class="flex flex-col">
-          <label class="text-sm font-semibold text-gray-900 mb-2">
-            <span>*</span>
-            <span>متاح بالمخزن</span>
-          </label>
-          <input formControlName="stock" class="border border-gray-300 rounded-3xl p-2 text-right" />
+      <app-input [control]="addProductForm.get('stock')" type="number" label="* المتاح بالمخزن" maxlength="20" class="w-full"
+        autofocus="true" required="true"></app-input>
         </div>
         <div class="flex flex-col col-span-2">
           <label class="text-sm font-semibold text-gray-900 mb-2"> الوصف</label>
