--- a/src/app/pages/index/views/product-card/product-card.component.html
+++ b/src/app/pages/index/views/product-card/product-card.component.html
@@ -31,7 +31,7 @@
       اضافة الى السلة
     </button>
     <span class="bg-gray-100 border px-4 py-2 rounded-full hover:bg-gray-200">
-      <svg class="w-5 h-5 text-red-400" [ngClass]="productId == product.id ? 'fill-current' :''" fill="none"
+      <svg class="w-5 h-5 text-red-400" [ngClass]="productAlreadyExistOnFav() ? 'fill-current' :''" fill="none"
         stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
         (click)="favProduct(product)"
         xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
